--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>Descobrindo o Sistema Solar</title>
 </head>
 <body>
+
+    <img src="img/Logo_legal.png" alt="Logo">
     <h1>Olá Mundo</h1>
     <p>Eu sou o <strong>Wesley</strong></p>
     
