--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <title>Descobrindo o Sistema Solar</title>
 </head>
 <body>
+    <header>
+        <div id="Logo>
+            <img src="img/Logo_legal.png" alt="Logo">
+            <h1>EQUIPE ANBRILEY</h1>
+        </div>
+    </header>
 
-    <img src="img/Logo_legal.png" alt="Logo">
-    <h1>Olá Mundo</h1>
-    <p>Eu sou o <strong>Wesley</strong></p>
-    
 
 
 </body>
