--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body>
     <header>
-        <div id="Logo>
+        <div id="logo">
             <img src="img/Logo_legal.png" alt="Logo">
             <h1>EQUIPE ANBRILEY</h1>
+
         </div>
     </header>
 
