--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div id="logo">
             <img src="img/Logo_legal.png" alt="Logo">
-            <h1>EQUIPE ANBRILEY</h1>
+            <span>EQUIPE ANBRILEY</span>
 
         </div>
     </header>
