--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
     <header>
         <div id="logo">
             <img src="img/Logo_legal.png" alt="Logo">
-            <span>EQUIPE ANBRILEY</span>
-
+            <span>EQUIPE ANBRILEY</span>   
         </div>
+        <ul>
+            <li><button></button></li>
+            <li><button></button></li>
+        </ul>
     </header>
 
 
