--- a/index.html
+++ b/index.html
@@ -13,10 +13,13 @@
             <img src="img/Logo_legal.png" alt="Logo">
             <span>EQUIPE ANBRILEY</span>   
         </div>
-        <ul>
-            <li><button></button></li>
-            <li><button></button></li>
-        </ul>
+        <div id="buttons">
+            <button>Bom</button>
+            <button>Dia</button>
+        </div>
+
+
+]
     </header>
 
 
