--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
             <span>EQUIPE ANBRILEY</span>   
         </div>
         <div id="buttons">
-            <button>Bom</button>
-            <button>Dia</button>
+            <button>Sobre nós</button>
+            <button>Contato</button>
         </div>
     </header>
 
