--- a/index.html
+++ b/index.html
@@ -20,6 +20,16 @@
     </header>
 
 
+    <section id="sec01">
+        <div id="container01">
+            <h2>QUAL É O NOSSO OBJETIVO?</h2>   
+            <p>oaoamoamsoamso</p>
+
+        </div>
+
+    </section>
+
+    
 
 </body>
 </html>
