--- a/index.html
+++ b/index.html
@@ -29,6 +29,15 @@
 
     </section>
 
+
+    <section id="sec02">
+        <h2>O SISTEMA SOLAR</h2>
+        <div id="container02">
+            <span id="sol"></span>
+        </div>
+
+    </section>
+
     
 
 </body>
