--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="sec02">
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
-            <span id="sol"></span>
+            <div id="sol"></div>
         </div>
 
     </section>
