--- a/index.html
+++ b/index.html
@@ -35,6 +35,12 @@
         <div id="container02">
             <div id="sol"></div>
         </div>
+    </section>
+
+
+    <section id="sec03">
+        <h2>QUAL É O NOSSO OBJETIVO?</h2>   
+        <p>oaoamoamsoamso</p>
 
     </section>
 
