--- a/index.html
+++ b/index.html
@@ -39,8 +39,12 @@
 
 
     <section id="sec03">
-        <h2>QUAL É O NOSSO OBJETIVO?</h2>   
-        <p>oaoamoamsoamso</p>
+        <div id="container03">
+            <h2>QUAL É O NOSSO OBJETIVO?</h2>   
+            <p>oaoamoamsoamso</p>
+
+        </div>
+
 
     </section>
 
