--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <section id="sec03">
         <div id="container03">
-            <h2>QUAL É O NOSSO OBJETIVO?</h2>   
+            <h2>CARACTERISTICAS E FENÔMENOS</h2>   
             <p>oaoamoamsoamso</p>
 
         </div>
