--- a/index.html
+++ b/index.html
@@ -49,6 +49,15 @@
     </section>
 
     
+    <section id="sec04">
+        <div id="container04">
+            <h2>SOBRE NÓS</h2>   
+            <p>oaoamoamsoamso</p>
+
+        </div>
+
+
+    </section>
 
 </body>
 </html>
