--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         </div>
     </header>
 
+    <section class="wrapper">
+            <div id="stars"></div>
+            <div id="stars2"></div>
+            <div id="stars3"></div>
+    </section>
+
 
     <section id="sec01">
         <div id="container01">
