--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
             <button>Contato</button>
         </div>
     </header>
-    <section class="wrapper">
+
+
+    <main>     <section class="wrapper">
         <div id="stars"></div>
         <div id="stars2"></div>
         <div id="stars3"></div>
-    </section>
+    </section></main>
     
     <section id="sec01">
         <div id="container01">
