--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
         </div>
     </header>
 
-
-    <main>     <section class="wrapper">
+    
+    <section class="wrapper">
         <div id="stars"></div>
         <div id="stars2"></div>
         <div id="stars3"></div>
-    </section></main>
+    </section>
     
     <section id="sec01">
         <div id="container01">
