--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="sec01">
         <div id="container01">
             <h2>QUAL É O NOSSO OBJETIVO?</h2>   
-            <p>oaoamoamsoamso</p>
+            <p>adunb oud</p>
 
         </div>
 
