--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="sec02">
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
-            <div id="sol"></div>
+            <div id="sol"><img src="img/sol.png" alt="Sol"></div>
         </div>
     </section>
 
