--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section id="sec01">
         <div id="container01">
             <h2>QUAL É O NOSSO OBJETIVO?</h2>   
-            <p>Temos finalidade de ajudar você, lhe informando, complementando sobre os misterios do nosso sistema solar, 
-                porem vamos além, podemos te dizer muito sobre o gigante universo em que você vive</p>
+            <p>Temos finalidade de ajudar você, lhe informando, complementando sobre os misterios do nosso sistema solar.
+                Porem vamos além, podemos te dizer muito sobre o gigante universo em que você vive.</p>
 
         </div>
 
