--- a/index.html
+++ b/index.html
@@ -47,9 +47,14 @@
 
     <section id="sec03">
         <div id="container03">
-            <h2>CARACTERISTICAS E FENÔMENOS</h2>   
-            <p>oaoamoamsoamso</p>
-
+            <h2>CURIOSIDADES E FENÔMENOS</h2>   
+            <p> 
+                -O sistema solar tem aproximadamente 4,6 bilhões de anos.
+                Contendo ao todo: oito planetas, 5 planetas anões, 181 luas, 552.894 asteroides e 3.083 cometas, espalhados em uma area de 18.75 trilhões de quilometros.
+            </p>
+            <p> 
+                -O sistema solar esta em constante movimento, fazendo uma viagem de aproximadamente 250 milhões de anos ao redor da Via-Lactea. 
+             </p>
         </div>
 
 
