--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <p> 
                 -O sistema solar esta em constante movimento, fazendo uma viagem de aproximadamente 250 milhões de anos ao redor da Via-Lactea. 
              </p>
+             <p>
+                -É natural imaginarmos que o planeta mais quente do sistema solar é o mais proximo ao sol, mas em questão de relação e distancia o planeta mais quente é: Vênus.
+                esse pequeno planeta apresenta uma atmosfera turbulenta e densa, rica em gases com dioxido de carbono, responsavel por um constante efeito estufa. com as temperaturas chegando a 470 °C.
+             </p>
         </div>
 
 
