--- a/index.html
+++ b/index.html
@@ -48,20 +48,22 @@
     <section id="sec03">
         <div id="container03">
             <h2>CURIOSIDADES E FENÔMENOS</h2>   
-            <li>
-                <ul>
+            <ul>
+                <li>
                     O sistema solar tem aproximadamente 4,6 bilhões de anos.
-                    Contendo ao todo: oito planetas, 5 planetas anões, 181 luas, 552.894 asteroides e 3.083 cometas, espalhados em uma area de 18.75 trilhões de quilometros.
-                </ul>
-                
-                 <ul>
-                    O sistema solar esta em constante movimento, fazendo uma viagem de aproximadamente 250 milhões de anos ao redor da Via-Lactea.
-                </ul>
-                
-                <ul>É natural imaginarmos que o planeta mais quente do sistema solar é o mais proximo ao sol, mas em questão de relação e distancia o planeta mais quente é: Vênus.
-                    esse pequeno planeta apresenta uma atmosfera turbulenta e densa, rica em gases com dioxido de carbono, responsavel por um constante efeito estufa. com as temperaturas chegando a 470 °C.
-                </ul>
-            </li>
+                Contendo ao todo: oito planetas, 5 planetas anões, 181 luas, 552.894 asteroides e 3.083 cometas, espalhados em uma area de 18.75 trilhões de quilometros.
+                </li>
+
+                <li>
+                    O sistema solar esta em constante movimento, fazendo uma viagem de aproximadamente 250 milhões de anos ao redor da Via-Lactea. 
+                </li>
+
+                <li>
+                    É natural imaginarmos que o planeta mais quente do sistema solar é o mais proximo ao sol, mas em questão de relação e distancia o planeta mais quente é: Vênus.
+                esse pequeno planeta apresenta uma atmosfera turbulenta e densa, rica em gases com dioxido de carbono, responsavel por um constante efeito estufa. com as temperaturas chegando a 470 °C.
+                </li>
+
+            </ul>
         </div>
 
 
