--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
     <section id="sec01">
         <div id="container01">
             <h2>QUAL É O NOSSO OBJETIVO?</h2>   
-            <p>Temos finalidade de ajudar você, lhe informando, complementando sobre os misterios do nosso sistema solar.
-                Porem vamos além, podemos te dizer muito sobre o gigante universo em que você vive.</p>
+            <p>Temos finalidade de ajudar você, lhe informando, complementando sobre os mistérios do nosso Sistema Solar.
+                Porém vamos além, podemos te dizer muito sobre o gigante universo em que você vive.</p>
 
         </div>
 
@@ -50,17 +50,17 @@
             <h2>CURIOSIDADES E FENÔMENOS</h2>   
             <ul>
                 <li>
-                    O sistema solar tem aproximadamente 4,6 bilhões de anos.
+                    O Sistema Solar tem aproximadamente 4,6 bilhões de anos.
                 Contendo ao todo: oito planetas, 5 planetas anões, 181 luas, 552.894 asteroides e 3.083 cometas, espalhados em uma area de 18.75 trilhões de quilometros.
                 </li>
 
                 <li>
-                    O sistema solar esta em constante movimento, fazendo uma viagem de aproximadamente 250 milhões de anos ao redor da Via-Lactea. 
+                    O Sistema Solar está em constante movimento, fazendo uma viagem de aproximadamente 250 milhões de anos ao redor da Via-Láctea. 
                 </li>
 
                 <li>
-                    É natural imaginarmos que o planeta mais quente do sistema solar é o mais proximo ao sol, mas em questão de relação e distancia o planeta mais quente é: Vênus.
-                esse pequeno planeta apresenta uma atmosfera turbulenta e densa, rica em gases com dioxido de carbono, responsavel por um constante efeito estufa. com as temperaturas chegando a 470 °C.
+                    É natural imaginarmos que o planeta mais quente do Sistema Solar é o mais próximo ao Sol, mas em questão de relação e distância o planeta mais quente é: Vênus.
+                Esse pequeno planeta apresenta uma atmosfera turbulenta e densa, rica em gases com dióxido de carbono (CO2), responsavel por um constante efeito estufa. Com as temperaturas chegando a 470 °C.
                 </li>
 
             </ul>
