--- a/index.html
+++ b/index.html
@@ -73,7 +73,15 @@
     <section id="sec04">
         <div id="container04">
             <h2>SOBRE NÓS</h2>   
-            <p>oaoamoamsoamso</p>
+            <div class="person">
+               <img src="" alt=""> 
+            </div>
+            <div class="person">
+                <img src="" alt="">
+            </div>
+            <div class="person">
+                <img src="" alt="">
+            </div>
 
         </div>
 
