--- a/index.html
+++ b/index.html
@@ -72,16 +72,19 @@
     
     <section id="sec04">
         <div id="container04">
-            <h2>SOBRE NÓS</h2>   
-            <div class="person">
-               <img src="" alt=""> 
-            </div>
-            <div class="person">
-                <img src="" alt="">
-            </div>
-            <div class="person">
-                <img src="" alt="">
-            </div>
+            <h2>SOBRE NÓS</h2> 
+            <div id="persons">
+                <div class="person">
+                    <img src="" alt=""> 
+                 </div>
+                 <div class="person">
+                     <img src="" alt="">
+                 </div>
+                 <div class="person">
+                     <img src="" alt="">
+                 </div>
+                 
+            </div>  
 
         </div>
 
