--- a/index.html
+++ b/index.html
@@ -75,15 +75,18 @@
             <h2>SOBRE NÓS</h2> 
             <div id="persons">
                 <div class="person">
+                    <h3>AN</h3>
                     <img src="" alt=""> 
                  </div>
                  <div class="person">
+                    <h3>BRI</h3>
                      <img src="" alt="">
                  </div>
                  <div class="person">
+                    <h2>LEY</h2>
                      <img src="" alt="">
                  </div>
-                 
+
             </div>  
 
         </div>
