--- a/index.html
+++ b/index.html
@@ -75,15 +75,15 @@
             <h2>SOBRE NÓS</h2> 
             <div id="persons">
                 <div class="person">
-                    <h3>AN</h3>
+                    <h3>ANDRÉ</h3>
                     <img src="" alt=""> 
                  </div>
                  <div class="person">
-                    <h3>BRI</h3>
+                    <h3>GABRIEL</h3>
                      <img src="" alt="">
                  </div>
                  <div class="person">
-                    <h3>LEY</h3>
+                    <h3>WESLEY</h3>
                      <img src="" alt="">
                  </div>
 
