--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
             </ul>
         </div>
-
+        <div id="container05"><img src="img/astronauta-removebg-preview.png" alt="Astronautinha"></div>
 
     </section>
 
