--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
+            <img src="img/planets/mercurio.png" alt="mercurio">
         </div>
     </section>
 
