--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
-            <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="50px" height="50px">
+            <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px" height="45px">
+            <img src="img/planets/venus.png" alt="venus" width="65px" height="65px">
         </div>
     </section>
 
