--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
             <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px" height="45px">
             <img class="planets" src="img/planets/venus.png" alt="venus" width="65px" height="65px">
+            <img class="planets" src="img/planets/terra.png" alt="terra"width="70px" height="70px">
         </div>
     </section>
 
