--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px" height="45px">
             <img class="planets" src="img/planets/venus.png" alt="venus" width="65px" height="65px">
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px" height="70px">
+            <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
         </div>
     </section>
 
