--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <img class="planets" src="img/planets/venus.png" alt="venus" width="65px" height="65px">
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px" height="70px">
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
+            <img class="planets" src="img/planets/jupiter.png" alt="jupiter" width="700px" height="700px">
         </div>
     </section>
 
