--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px" height="70px">
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
             <img class="planets" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
+            <img class="planets" src="img/planets/saturno.png" alt="saturno" width="150px" height="150px">
         </div>
     </section>
 
