--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <img class="planets" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
             <img class="planets" src="img/planets/saturno.png" alt="saturno" width="150px" height="150px">
             <img class="planets" src="img/planets/urano.png" alt="urano" width="80px" height="80px">
+            <img class="planets" src="img/planets/netuno.png" alt="netuno" width="85px" height="85px>
         </div>
     </section>
 
