--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img class="planets" src="img/planets/venus.png" alt="venus" width="65px" height="65px">
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px" height="70px">
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
-            <img class="planets" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
+            <img class="planets" id="saturno" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
             <img class="planets" src="img/planets/saturno.png" alt="saturno" width="305px" height="150px">
             <img class="planets" src="img/planets/urano.png" alt="urano" width="80px" height="80px">
             
