--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
             <img class="planets-big" id="saturno" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
             <img class="planets-big" src="img/planets/saturno.png" alt="saturno" width="305px" height="150px">
-            <img class="planets-big" src="img/planets/netuno.png" alt="urano" width="105px" height="80px">
-            <img src="img/planets/urano.png" alt="netuno" class="planets" width="90px" height="90px">
+            <img class="planets" src="img/planets/netuno.png" alt="urano" width="105px" height="80px">
+            <img class="planets" src="img/planets/urano.png" alt="netuno" width="90px" height="90px">
             
         </div>
     </section>
