--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
             <img class="planets-big" id="saturno" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
             <img class="planets-big" src="img/planets/saturno.png" alt="saturno" width="305px" height="150px">
-            <img class="planets" id="urano" src="img/planets/netuno.png" alt="urano" width="125px" height="100px">
+            <img class="planets" id="urano" src="img/planets/netuno.png" alt="urano" width="125px" height="auto">
             <img class="planets" src="img/planets/urano.png" alt="netuno" width="90px" height="90px">
             
         </div>
