--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
-            <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px" height="45px">
-            <img class="planets" src="img/planets/venus.png" alt="venus" width="65px" height="65px">
-            <img class="planets" src="img/planets/terra.png" alt="terra"width="70px" height="70px">
-            <img class="planets" src="img/planets/marte.png" alt="marte" width="70px" height="70px">
-            <img class="planets-big" id="saturno" src="img/planets/jupiter.png" alt="jupiter" width="200px" height="200px">
-            <img class="planets-big" src="img/planets/saturno.png" alt="saturno" width="305px" height="150px">
+            <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto">
+            <img class="planets" src="img/planets/venus.png" alt="venus" width="65px"  height="auto">
+            <img class="planets" src="img/planets/terra.png" alt="terra"width="70px"  height="auto">
+            <img class="planets" src="img/planets/marte.png" alt="marte" width="70px"  height="auto">
+            <img class="planets-big" id="saturno" src="img/planets/jupiter.png" alt="jupiter" width="200px"  height="auto">
+            <img class="planets-big" src="img/planets/saturno.png" alt="saturno" width="305px"  height="auto">
             <img class="planets" id="urano" src="img/planets/netuno.png" alt="urano" width="80px" height="auto">
-            <img class="planets" src="img/planets/urano.png" alt="netuno" width="90px" height="90px">
+            <img class="planets" src="img/planets/urano.png" alt="netuno" width="90px" height="auto">
             
         </div>
     </section>
