--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="sec02">
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
-            <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
+            <a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol" id="sol"></a>
             <img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto">
             <img class="planets" src="img/planets/venus.png" alt="venus" width="65px"  height="auto">
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px"  height="auto">
