--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
         <div id="container02">
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
 
-          
-            <a href="https://pt.wikipedia.org/wiki/Merc%C3%BArio_(planeta)"><img class="planets" src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto"></a>
+            <div class="planets"><a href="https://pt.wikipedia.org/wiki/Merc%C3%BArio_(planeta)"><img src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto"></a></div>
             <img class="planets" src="img/planets/venus.png" alt="venus" width="65px"  height="auto">
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px"  height="auto">
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px"  height="auto">
