--- a/index.html
+++ b/index.html
@@ -43,8 +43,12 @@
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
 
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/Merc%C3%BArio_(planeta)"><img src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto"></a></div>
-
-            <img class="planets" src="img/planets/venus.png" alt="venus" width="65px"  height="auto">
+            <div class="planets"><a href="https://pt.wikipedia.org/wiki/V%C3%A9nus_(planeta)"></a> <img src="img/planets/venus.png" alt="venus" width="65px"  height="auto"></div>
+            <div class="planets"></div>
+            <div class="planets"></div>
+            <div class="planets"></div>
+            <div class="planets"></div>
+           
             <img class="planets" src="img/planets/terra.png" alt="terra"width="70px"  height="auto">
             <img class="planets" src="img/planets/marte.png" alt="marte" width="70px"  height="auto">
            <img class="planets-big" id="jupiter" src="img/planets/jupiter.png" alt="jupiter" width="200px"  height="auto">
