--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
 
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/Merc%C3%BArio_(planeta)"><img src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto"></a></div>
-            <div class="planets"><a href="https://pt.wikipedia.org/wiki/V%C3%A9nus_(planeta)"></a> <img src="img/planets/venus.png" alt="venus" width="65px"  height="auto"></div>
-            <div class="planets"><a href="https://pt.wikipedia.org/wiki/Terra"></a><img src="img/planets/terra.png" alt="terra"width="70px"  height="auto"></div>
+            <div class="planets"><a href="https://pt.wikipedia.org/wiki/V%C3%A9nus_(planeta)"> <img src="img/planets/venus.png" alt="venus" width="65px"  height="auto"></a></div>
+            <div class="planets"><a href="https://pt.wikipedia.org/wiki/Terra"><img src="img/planets/terra.png" alt="terra"width="70px"  height="auto"></a></div>
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/Marte_(planeta)"><img src="img/planets/marte.png" alt="marte" width="70px"  height="auto"></a></div>
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/Urano_(planeta)"><img  id="urano" src="img/planets/netuno.png" alt="urano" width="100px" height="auto"></a></div>
             <div class="planets"> <a href="https://pt.wikipedia.org/wiki/Netuno_(planeta)"><img src="img/planets/urano.png" alt="netuno" width="90px" height="auto"></a></div>
