--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="sec02">
         <h2>O SISTEMA SOLAR</h2>
         <div id="container02">
-            <div id="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
+            <div class="sol"><a href="https://pt.wikipedia.org/wiki/Sol"><img src="img/sol.png" alt="Sol"></a></div>
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/Merc%C3%BArio_(planeta)"><img src="img/planets/mercurio.png" alt="mercurio" width="45px"  height="auto"></a></div>
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/V%C3%A9nus_(planeta)"> <img src="img/planets/venus.png" alt="venus" width="65px"  height="auto"></a></div>
             <div class="planets"><a href="https://pt.wikipedia.org/wiki/Terra"><img src="img/planets/terra.png" alt="terra"width="70px"  height="auto"></a></div>
