--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <span>EQUIPE ANBRILEY</span>   
         </div>
         <div id="buttons">
-            <button>Sobre nós</button>
+            <button id="btn01" onclick="scroll_auto()">Sobre nós</button>
             <button>Contato</button>
         </div>
     </header>
@@ -84,15 +84,15 @@
             <div id="persons">
                 <div class="person">
                     <h3>ANDRÉ</h3>
-                    <img src="" alt=""> 
-                 </div>
+                    <img class="foto" src="img/social/foto-exemplo.png" alt=foto"> 
+                </div>
                  <div class="person">
                     <h3>GABRIEL</h3>
-                     <img src="" alt="">
+                     <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
                  </div>
                  <div class="person">
                     <h3>WESLEY</h3>
-                     <img src="" alt="">
+                     <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
                  </div>
 
             </div>  
@@ -101,8 +101,6 @@
 
 
     </section>
-
-
 
     <footer>    
         <h3>Desenvolvido pela a Equipe ANBRILEY </h3>
