--- a/index.html
+++ b/index.html
@@ -85,10 +85,20 @@
                 <div class="person">
                     <h3>ANDRÉ</h3>
                     <img class="foto" src="img/social/foto-exemplo.png" alt=foto"> 
+                    <div class="social">
+                        <img src="img/social/facebook.png" alt="facebook" width="50px" height="50px">
+                        <img src="img/social/github.png" alt="github" width="50px" height="50px">
+                        <img src="img/social/instagram.png" alt="instagram" width="50px" height="50px">
+                     </div>
                 </div>
                  <div class="person">
                     <h3>GABRIEL</h3>
                      <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
+                     <div class="social">
+                        <img src="img/social/facebook.png" alt="facebook" width="50px" height="50px">
+                        <img src="img/social/github.png" alt="github" width="50px" height="50px">
+                        <img src="img/social/instagram.png" alt="instagram" width="50px" height="50px">
+                     </div>
                  </div>
                  <div class="person">
                     <h3>WESLEY</h3>
