--- a/index.html
+++ b/index.html
@@ -86,27 +86,27 @@
                     <h3>ANDRÉ</h3>
                     <img class="foto" src="img/social/foto-exemplo.png" alt=foto"> 
                     <div class="social">
-                        <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px">
-                        <img src="img/social/github.png" alt="github" width="30px" height="30px">
-                        <img src="img/social/instagram.png" alt="instagram" width="30px" height="30px">
+                        <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px"  onclick="click()">
+                        <img src="img/social/github.png" alt="github" width="30px" height="30px"  onclick="click()">
+                        <img src="img/social/instagram.png" alt="instagram" width="30px" height="30px"  onclick="click()">
                      </div>
                 </div>
                  <div class="person">
                     <h3>GABRIEL</h3>
                      <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
                      <div class="social">
-                        <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px">
-                        <img src="img/social/github.png" alt="github" width="30px" height="30px">
-                        <img src="img/social/instagram.png" alt="instagram" width="30px" height="30px">
+                        <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px"  onclick="click()">
+                        <img src="img/social/github.png" alt="github" width="30px" height="30px"  onclick="click()">
+                        <img src="img/social/instagram.png" alt="instagram" width="30px" height="30px"  onclick="click()">
                      </div>
                  </div>
                  <div class="person">
                     <h3>WESLEY</h3>
                      <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
                      <div class="social">
-                        <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px">
-                        <img src="img/social/github.png" alt="github" width="30px" height="30px">
-                        <img src="img/social/instagram.png" alt="instagram" width="30px" height="30px">
+                        <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px" onclick="click()">
+                        <img src="img/social/github.png" alt="github" width="30px" height="30px"  onclick="click()">
+                        <img src="img/social/instagram.png" alt="instagram" width="30px" height="30px"  onclick="click()">
                      </div>
                  </div>
 
