adicionando imagens integrantes

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             <div id="persons">
                 <div class="person">
                     <h3>ANDRÉ</h3>
-                    <img class="foto" src="img/social/foto-exemplo.png" alt=foto"> 
+                    <img class="foto" src="img/social/ANDRÉ.jpg" alt=foto"> 
                     <div class="social">
                         <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px"  onclick="click()">
                         <img src="img/social/github.png" alt="github" width="30px" height="30px"  onclick="click()">
@@ -93,7 +93,7 @@
                 </div>
                  <div class="person">
                     <h3>GABRIEL</h3>
-                     <img class="foto" src="img/social/foto-exemplo.png" alt="foto">
+                     <img class="foto" src="img/social/GABRIEL.jpg" alt="foto">
                      <div class="social">
                         <img src="img/social/facebook.png" alt="facebook" width="30px" height="30px"  onclick="click()">
                         <img src="img/social/github.png" alt="github" width="30px" height="30px"  onclick="click()">
